--- a/style.css
+++ b/style.css
@@ -1,24 +1,24 @@
 body {
-  margin: 0;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
+  min-height: 100vh;
+  margin: 0;
   font-family: 'Roboto', sans-serif;
 }
 
 /*This code is for the tab on the header, including logo and links*/
 header {
-  padding: 0px 80px;
   display: flex;
   flex-direction: column;
+  padding: 0px 80px;
   background-color: #1f2937;
 }
 
 .header-tab {
-  padding: 10px 0px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 10px 0px;
 }
 
 .header-logo {
@@ -28,10 +28,10 @@ header {
 }
 
 ul {
-  margin:0;
-  padding: 0;
   display: flex;
   gap: 20px;
+  margin:0;
+  padding: 0;
   list-style-type: none;
 }
 
@@ -42,8 +42,8 @@ li {
 
 /*This code is for the text content on the header*/
 .header-content {
-  margin: 100px 0px;
   display: flex;
+  margin: 100px 0px;
 }
 
 .left-content {
@@ -69,10 +69,10 @@ p {
 .button-one {
   margin-top: 10px;
   padding: 5px 25px;
+  font-weight: bold;
   border: 1px solid #3882f6;
   border-radius: 10px;
   background-color: #3882f6;
-  font-weight: bold;
 }
 
 .placeholder {
@@ -81,7 +81,34 @@ p {
   justify-content: center;
   align-items: center;
   flex-shrink: 0;
-  background-color: rgba(109, 116, 125);
   text-align: center;
+  background-color: rgba(109, 116, 125);
 }
 
+/*Starting from here it's the code for the "some random information section*/
+h1 {
+  font-size: 36px;
+  font-weight: 900;
+  text-align: center;
+  color: #1f2937;
+}
+
+.container-one {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 32px;
+  flex-wrap: wrap;
+  padding: 0px 80px;
+}
+
+.info {
+  width: 225px;
+}
+
+.description {
+  margin-top: 6px;
+  font-size: 18px;
+  text-align: center;
+  color: #1f2937;
+}
