--- a/style.css
+++ b/style.css
@@ -167,3 +167,11 @@ h1 {
   color: #f9faf8;
   background-color: #3882f6;
 }
+
+.footer {
+  padding: 20px 20px;
+  font-size: 18px;
+  background-color: #1f2937;
+  color: #f9faf8;
+  text-align: center;
+}
